# auth-core

./: .gitignore  README.md  pyproject.toml
examples/01_basic_auth/: README.md  main.py
examples/02_sqlalchemy_example/: README.md  main.py
scripts/: setup_db.py  teardown_db.py
src/auth_core/: __init__.py
src/auth_core/adapters/event_buses/: memory.py
src/auth_core/adapters/hashers/: argon2.py  bcrypt.py
src/auth_core/adapters/mfa_providers/: totp.py
src/auth_core/adapters/repositories/: memory.py
src/auth_core/adapters/repositories/mongodb/: __init__.py  credential_repository.py  oauth_repository.py  password_reset_repository.py  session_repository.py  token_repository.py
src/auth_core/adapters/repositories/sqlalchemy/: __init__.py  credential_repository.py  models.py  oauth_repository.py  password_reset_repository.py  session_repository.py  token_repository.py
src/auth_core/adapters/token_generators/: fernet.py  jwt.py
src/auth_core/domain/: exceptions.py  models.py  services.py
src/auth_core/dto/: requests.py  responses.py
src/auth_core/events/: events.py
src/auth_core/interfaces/: event_bus.py  hasher.py  mfa_provider.py  oauth_provider.py  repository.py  session_store.py  token_generator.py
src/auth_core/utils/: generators.py  validators.py
tests/: conftest.py  test_repositories_all.py
tests/contracts/: test_credential_repository_contract.py  test_hasher_contract.py  test_token_generator_contract.py  test_token_repository_contract.py
tests/e2e/: test_authentication_flow.py
tests/unit/domain/: test_auth_service.py  test_credential.py  test_session.py  test_session_service.py  test_token.py  test_token_service.py
