[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auth-core"
version = "0.1.0"
description = "Authentication and authorization package following hexagonal architecture and DDD principles"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "authentication",
    "authorization",
    "jwt",
    "oauth",
    "mfa",
    "hexagonal-architecture",
    "ddd",
    "domain-driven-design"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic[email]>=2.0",
]

[project.optional-dependencies]
# Hashers
argon2 = ["argon2-cffi>=23.0"]
bcrypt = ["bcrypt>=4.0"]

# Tokens
jwt = ["pyjwt>=2.8", "cryptography>=41.0"]
fernet = ["cryptography>=41.0"]

# MFA
mfa = ["pyotp>=2.9"]

# OAuth
oauth = ["authlib>=1.3", "httpx>=0.27"]

# Session stores
redis = ["redis>=5.0"]
sqlalchemy = ["sqlalchemy>=2.0"]
mongodb = ["pymongo>=4.0"]

# Development
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "faker>=20.0",
    "hypothesis>=6.92",
    "freezegun>=1.4",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.7",
]

# Test dependencies
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "faker>=20.0",
    "hypothesis>=6.92",
    "freezegun>=1.4",
]

# All extras combined
all = [
    "auth-core[argon2,bcrypt,jwt,fernet,mfa,oauth,redis,sqlalchemy,mongodb]"
]

[project.urls]
Homepage = "https://github.com/yourusername/auth-core"
Documentation = "https://github.com/yourusername/auth-core#readme"
Repository = "https://github.com/yourusername/auth-core"
Issues = "https://github.com/yourusername/auth-core/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v
    --strict-markers
    --tb=short
    --cov=src/auth_core
    --cov-report=term-missing
    --cov-report=html
"""

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.hypothesis]
max_examples = 100
deadline = 1000
